--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_URL=http://localhost
 JWT_SECRET_KEY=uAsBw6WxqD
 JWT_EXPIRATION_TIME=3600
 
-# DATABASE
+# DATABASE  数据库mysql
 DB_TYPE=mysql
 DB_USERNAME=root
 DB_PASSWORD=123456
