--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
     "mysql": "^2.18.1",
+    "nestjs-pino": "^2.5.2",
+    "pino-http": "^7.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.3.0",
-    "typeorm": "^0.3.6"
+    "typeorm": "^0.3.6",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
